--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -124,11 +124,7 @@
         "scrolled": true,
         "id": "LtV0ZEqcmfOS",
         "colab_type": "code",
-        "outputId": "5560f263-5349-4fb3-8fdc-c2f18c27936b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        }
+        "colab": {}
       },
       "source": [
         "dataset_fake = pd.read_csv(\"/content/Fake.csv\")\n",
@@ -155,7 +151,10 @@
         "clf = MultinomialNB()\n",
         "OneVsRestClassifier(clf.fit(Y,y_train))\n",
         "print(clf.score(T,y_test))\n"
-      ],    
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
     {
       "cell_type": "code",
       "metadata": {
